--- a/src/AppBundle/Resources/views/Default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/Default/feedback.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    <div class="title"><div>Связь с администрацией сайта</div></div>
+    <div class="title text-uppercase"><h1>Связь с администрацией сайта</h1></div>
     <ol class="breadcrumb">
         <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
             <a itemprop="url" href="/"><span itemprop="title">Главная</span></a></li>
