--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -40,7 +40,7 @@ h1.title{
 
 .table-layout {
     display:table;
-
+    width: 100%;
     padding-bottom: 30px;
     margin-left: 15px;
 }
@@ -153,9 +153,6 @@ h1.blue-text{
 #search{
     width: 300px;
 }
-.navbar-form{
-    padding-top: 23px;
-}
 .register-btn{
     padding-top: 36px;
     display: inline-block;
@@ -170,110 +167,41 @@ h1.blue-text{
     }
 }
 
-.navbar-collapse{
-    padding: 0;
-}
-nav{
+nav.navbar{
+    margin-left: -15px;
+    margin-right: -15px;
     border-radius: 0;
-    &.navbar{
-        margin-bottom: 0;
-        min-height: inherit;
-        margin-left: -15px;
-        margin-right: -15px;
-        border: 0;
+    border-right: 0;
+    border-left: 0;
+}
+.navbar-nav{
+    font-size: 16px;
+}
+.navbar-nav li:hover{
+    &>.submenu{
+        display: block;
     }
-    .navbar-nav{
-        border-radius: 0;
-        width: 100%;
-        display:table;
-        background: #EEE;
-        //border-bottom: 1px solid #EEEEEE;
-        //table-layout:fixed;
+}
+.submenu{
+    display: none;
+    position: absolute;
+    background: #f8f8f8;
+    padding: 5px 10px;
+    border-left: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+    border-right: 1px solid #e7e7e7;
+    z-index: 999;
+    min-width: 200px;
+    .submenu-items{
         li{
-            border-bottom: 5px solid #FFF;
-            font-size: 13px;
-            position: relative;
-            text-align: center;
-            float: none;
-            display:table-cell;
-            text-transform: @uppercase;
-            border-top: 1px solid @color-red;
-            &:hover{
-                background: #DDD;
-            }
-            &.active{
-                //border-bottom: 5px solid #004889;
-            }
-            &.active a{
-                color: @color-white;
-                background: @color-red;
-            }
             a{
-                padding-bottom: 8px;
-                color: @color-black;
-                &:hover{
-                    background: none;
-                    color: @color-red;
-                }
+                padding: 5px;
+                display: block;
             }
-            .submenu{
-                transition: visibility 0s, opacity 0.5s ease;
-                position: absolute;
-                //display: none;
-                visibility: hidden;
-                opacity: 0;
-                z-index: 55;
-                padding-top: 0px;
-                width: 100%;
-                .submenu-items{
-                    background: #DDD;
-                    width: 100%;
-                    //border-left: 1px solid #F15B23;
-                    //border-right: 1px solid #F15B23;
-                    //border-bottom: 1px solid #F15B23;
-                    li{
-                        border-bottom: 0;
-                        border-top: 1px solid #FFF;
-                        &:not(:last-child){
-                        }
-                        &:last-child{
-                            border-bottom: 0;
-                        }
-                        &:hover{
-                            background: #CCC;
-                        }
-                        //background: #004889;
-                        text-align: left;
-                        display: block;
-                        a{
-                            display: block;
-                            padding: 10px 15px;
-                            color: #333;
-                            background: #DDD;
-                            &:hover{
-                                color: @color-red;
-                                background: #CCC;
-                            }
-                        }
-                    }
-                }
-            }
-            &:hover .submenu{
-                visibility: visible;
-                opacity: 1;
-            }
-
         }
     }
 }
 
-nav .navbar-nav li:hover{
-    //background: #337AB7;
-    color: @color-red;
-    a{
-        color: @color-red;
-    }
-}
 
 
 @media screen and (min-width: 768px) {
@@ -699,10 +627,7 @@ th.prev, th.next, th.picker-switch{
 .btn.btn-default.dropdown-toggle:hover{
     background: none;
 }
-nav .navbar-nav li.active a:hover{
-    color: #FFFFFF;
-    background: @color-red;
-}
+
 .ya-share2__list{
     margin-top: 2px;
     width: 150px;
