--- a/src/AppBundle/Resources/views/Default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/Default/feedback.html.twig
@@ -37,6 +37,7 @@
                         <select class="form-control" name="type">
                             <option value="Добавление мероприятия">Добавление мероприятия</option>
                             <option value="Сотрудничество">Сотрудничество</option>
+                            <option value="Реклама">Реклама</option>
                             <option value="Техническая поддержка">Техническая поддержка</option>
                         </select>
                     </div>
