--- a/src/AdminBundle/Resources/views/Event/edit.html.twig
+++ b/src/AdminBundle/Resources/views/Event/edit.html.twig
@@ -3,7 +3,7 @@
 {% block breadcrumb %}
     <ul class="breadcrumb well">
         <li><a href="{{ path('admin_main') }}">Домой</a> <span class="divider"></span></li>
-        <li><a href="{{ path('admin_event_list') }}">События</a> <span class="divider"></span></li>
+        <li><a href="{{ path('admin_event_list') }}">Мероприятия</a> <span class="divider"></span></li>
         <li class="active">Изменение<span class="divider"></span></li>
     </ul>
 {% endblock %}
