--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -75,24 +75,24 @@
     <div class="container-fluid">
         <header>
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-6 col-sm-4">
                     <div style="width: 250px">
                         <a href="{{ path('homepage') }}">
                             <img src="{{ asset('bundles/app/images/logo.png') }}" id="logo" style=" float: left" all="Альманах медицинских событий">
                         </a>
                     </div>
                 </div>
-                <div class="col-xs-6 text-right hidden-sm hidden-xs">
+                {#<div class="col-xs-6 text-right hidden-sm hidden-xs">#}
                     {#<form class="navbar-form navbar-right" role="search" action="{{ path('search') }}">#}
                         {#<div class="form-group">#}
                             {#<input type="text" class="form-control" id="search" placeholder="Поиск событий" name="search">#}
                         {#</div>#}
                         {#<button type="submit" class="btn btn-primary" style="margin-left: -4px;">Найти</button>#}
                     {#</form>#}
-                </div>
-                <div class="col-xs-3 hidden-sm hidden-xs">
+                {#</div>#}
+                <div class="col-xs-6 col-sm-offset-2 col-sm-6">
                     {% if app.user != null %}
-                        <div class="navbar-form navbar-right">
+                        <div class="navbar-form navbar-right" id="auth-menu">
                             <div class="dropdown">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                     {{ app.user.lastName~' '~app.user.firstName }}
@@ -110,7 +110,15 @@
                             </div>
                         </div>
                     {% else %}
-                        <div class="navbar-form navbar-right">
+                        <div class="navbar-form navbar-right" id="auth-menu">
+
+                            <div class="location"><span class="glyphicon glyphicon-map-marker"></span>
+                                <select>
+                                    <option value="Москва">Москва</option>
+                                    <option value="Воронеж">Воронеж</option>
+                                </select>
+                            </div>
+
                             <a href="{{ path('fos_user_registration_register') }}">Регистрация</a>&nbsp;&nbsp;&nbsp;<button class="btn btn-primary" id="login">Вход</button>
                         </div>
                         <div class="register-btn">
