--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -112,12 +112,12 @@
                     {% else %}
                         <div class="navbar-form navbar-right" id="auth-menu">
 
-                            <div class="location"><span class="glyphicon glyphicon-map-marker"></span>
-                                <select>
-                                    <option value="Москва">Москва</option>
-                                    <option value="Воронеж">Воронеж</option>
-                                </select>
-                            </div>
+                            {#<div class="location"><span class="glyphicon glyphicon-map-marker"></span>#}
+                                {#<select>#}
+                                    {#<option value="Москва">Москва</option>#}
+                                    {#<option value="Воронеж">Воронеж</option>#}
+                                {#</select>#}
+                            {#</div>#}
 
                             <a href="{{ path('fos_user_registration_register') }}">Регистрация</a>&nbsp;&nbsp;&nbsp;<button class="btn btn-primary" id="login">Вход</button>
                         </div>
