--- a/src/AppBundle/Resources/views/Publication/comments.html.twig
+++ b/src/AppBundle/Resources/views/Publication/comments.html.twig
@@ -44,7 +44,7 @@
                     <textarea placeholder="Введите комментарий" class="form-control" name="comment" required="required"></textarea>
                 </div>
 
-                    <button class="btn btn-primary">Отпрвить</button>
+                    <button class="btn btn-primary">Отправить</button>
 
             </form>
             {% else %}
