--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -962,3 +962,35 @@ th.prev, th.next, th.picker-switch{
         }
     }
 }
+.new-info{
+    display: none;
+    cursor: pointer;
+    padding: 6px 6px 2px 6px;
+    span{
+        color: #ffaa39;
+        font-size: 19px;
+    }
+}
+.new-info-block{
+    display: none;
+    position: absolute;
+    background: #FFF;
+    padding: 10px;
+    border-radius: 0 0 8px 8px;
+    border: 1px solid #CCC;
+    right: 15px;
+    width: 320px;
+    top: 34px;
+    z-index: 999;
+    font-family: HelveticaNeue-Light;
+    .title{
+        display: inline-block;
+        font-size: 13px;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+    .list{
+        list-style: circle;
+        margin-left: 20px;
+    }
+}
