--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -68,11 +68,20 @@
                 </li>
                 <li {{ app.request.attributes.get('_route') == 'feedback' ? 'class="active"' : ''}} ><a href="{{ path('feedback') }}">Связаться</a></li>
             </ul>
-            <form class="navbar-form navbar-right" action="{{ path('search') }}">
+            <form class="navbar-form navbar-right" action="{{ path('search') }}" style="position: relative">
                 <div class="form-group">
                     <input type="text" class="form-control" id="search" placeholder="Поиск событий" name="search">
                 </div>
                 <button type="submit" class="btn btn-default">Найти</button>
+                <a type="button" class="btn btn-default new-info"><span class="glyphicon glyphicon-cog"></span></a>
+                <div class="new-info-block">
+                    <strong class="title">ОБНОВЛЕНИЯ НА САЙТЕ:</strong><br />
+                    <ul class="list">
+                        <li>Новый калькулятор <a href="#">QRISK</a></li>
+                        <li>Сохранение публикаций в избранное</li>
+                        <li>Сохранение мероприятий в избранное</li>
+                    </ul>
+                </div>
             </form>
             {#<ul class="nav navbar-nav navbar-right">#}
                 {#<li><a href="#">Link</a></li>#}
