--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -73,15 +73,15 @@
                     <input type="text" class="form-control" id="search" placeholder="Поиск событий" name="search">
                 </div>
                 <button type="submit" class="btn btn-default">Найти</button>
-                <a type="button" class="btn btn-default new-info"><span class="glyphicon glyphicon-cog"></span></a>
-                <div class="new-info-block">
-                    <strong class="title">ОБНОВЛЕНИЯ НА САЙТЕ:</strong><br />
-                    <ul class="list">
-                        <li>Новый калькулятор <a href="#">QRISK</a></li>
-                        <li>Сохранение публикаций в избранное</li>
-                        <li>Сохранение мероприятий в избранное</li>
-                    </ul>
-                </div>
+                {#<a type="button" class="btn btn-default new-info"><span class="glyphicon glyphicon-cog"></span></a>#}
+                {#<div class="new-info-block">#}
+                    {#<strong class="title">ОБНОВЛЕНИЯ НА САЙТЕ:</strong><br />#}
+                    {#<ul class="list">#}
+                        {#<li>Новый калькулятор <a href="#">QRISK</a></li>#}
+                        {#<li>Сохранение публикаций в избранное</li>#}
+                        {#<li>Сохранение мероприятий в избранное</li>#}
+                    {#</ul>#}
+                {#</div>#}
             </form>
             {#<ul class="nav navbar-nav navbar-right">#}
                 {#<li><a href="#">Link</a></li>#}
