--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -60,22 +60,22 @@
 
 {% block topBody %}
     <div class="row hidden-sm hidden-xs" style="margin: 0">
-        <div class="owl-carousel event-carusel owl-theme owl-events">
-            {% for carusel in carusels %}
-                {% if carusel.preview.path is defined %}
-                    <div class="item thumbnail">
-                        <a href="{{ path('event',{'url' : carusel.slug }) }}">
-                            <img src="{{ carusel.preview.path }}" title="{{ carusel.title }}" alt="{{ carusel.title }}" class="owl-event-img">
-                        </a>
-                        <div class="owl-event-title">
-                            <strong>{{ carusel.start | date('d') }} {{ carusel.start | date('m') | month }}</strong><br />
-                            <a href="{{ path('event',{'url' : carusel.slug }) }}" class="black">{{ carusel.shortTitle }}</a>
-                        </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
+        {#<div class="owl-carousel event-carusel owl-theme owl-events">#}
+            {#{% for carusel in carusels %}#}
+                {#{% if carusel.preview.path is defined %}#}
+                    {#<div class="item thumbnail">#}
+                        {#<a href="{{ path('event',{'url' : carusel.slug }) }}">#}
+                            {#<img src="{{ carusel.preview.path }}" title="{{ carusel.title }}" alt="{{ carusel.title }}" class="owl-event-img">#}
+                        {#</a>#}
+                        {#<div class="owl-event-title">#}
+                            {#<strong>{{ carusel.start | date('d') }} {{ carusel.start | date('m') | month }}</strong><br />#}
+                            {#<a href="{{ path('event',{'url' : carusel.slug }) }}" class="black">{{ carusel.shortTitle }}</a>#}
+                        {#</div>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#{% endif %}#}
+            {#{% endfor %}#}
+        {#</div>#}
 
         {#<div class="event-carusel-pages">#}
         {#{% if carusels | length > 4 %}#}
